--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,23 @@
 .navbar a:hover{
   color: blueviolet;
 }
+
+
+.content{
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
+  text-align: left;
+
+}
+
+.preview{
+  padding: 10px 16px;
+  margin: 20px 0;
+  border-bottom: solid #f2f2f2;
+
+}
+
+.preview:hover{
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
